<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PosConfirmBitCtrl_Arm1" Id="{3dcea65b-c342-4bff-b1df-821553f095cd}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PosConfirmBitCtrl_Arm1
VAR

	fbFBPArmHorzZoneConfirm_Arm1 : fbV2_FBPArmHorzZoneConfirm;

END_VAR]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Ld"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ARbLdHorzZoneConfirm"</v>
                            <v n="Type">""</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">36L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">true</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"fbV2_FBPArmHorzZoneConfirm"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbFBPArmHorzZoneConfirm_Arm1"</v>
                          <v n="Type">""</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">8L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">"ARbArm1HorzStnZoneConfirm"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">10L</v>
                            </o>
                            <o>
                              <v n="Operand">"ARbUldHorzZoneConfirm"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">11L</v>
                            </o>
                            <o>
                              <v n="Operand">"ARiArmCurrentHorzZoneNo[1]"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">12L</v>
                            </o>
                            <o>
                              <v n="Operand">"ARbArmInvalidListingErr[1]"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">13L</v>
                            </o>
                            <o>
                              <v n="Operand">"ARbLdHorzZoneConfirmDisplay"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">14L</v>
                            </o>
                            <o>
                              <v n="Operand">"ARbArm1HorzStnZoneConfirmDisplay"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">15L</v>
                            </o>
                            <o>
                              <v n="Operand">"ARbUldHorzZoneConfirmDisplay"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">16L</v>
                            </o>
                            <o>
                              <v n="Operand">"ARiArmCurrentHorzZoneNoDisplay[1]"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">17L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">19L</v>
                            </o>
                            <v n="Id">18L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARbArmHorzHomeDone[1]"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">21L</v>
                            </o>
                            <v n="Id">20L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"DSArm1HorzConfig.lrGen_Out_CurrentPos"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">23L</v>
                            </o>
                            <v n="Id">22L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARlrArmHorzStartPoint[1]"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">25L</v>
                            </o>
                            <v n="Id">24L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARlrArmHorzEndPoint[1]"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">27L</v>
                            </o>
                            <v n="Id">26L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARlrLdHorzCentrePoint"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">29L</v>
                            </o>
                            <v n="Id">28L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARlrStnHorzCentrePoint"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">31L</v>
                            </o>
                            <v n="Id">30L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARlrUldHorzCentrePoint"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">33L</v>
                            </o>
                            <v n="Id">32L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ARiArm1HorzListing"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">35L</v>
                            </o>
                            <v n="Id">34L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>EN</v>
                            <v>bEnable</v>
                            <v>lrHorzActualPos</v>
                            <v>lrHorzStartPoint</v>
                            <v>lrHorzEndPoint</v>
                            <v>ARlrLdHorzCentrePoint</v>
                            <v>ARlrStnHorzCentrePoint</v>
                            <v>ARlrUldHorzCentrePoint</v>
                            <v>ARiStnHorzListing</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>LREAL</v>
                            <v>LREAL</v>
                            <v>LREAL</v>
                            <v>ARRAY [0..ILDSTNQTY] OF LREAL</v>
                            <v>ARRAY [0..ISTNQTY] OF LREAL</v>
                            <v>ARRAY [0..IULDSTNQTY] OF LREAL</v>
                            <v>ARRAY [1..50] OF INT</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>ARbLdHorzZoneConfirm</v>
                            <v>ARbHorzStnZoneConfirm</v>
                            <v>ARbUldHorzZoneConfirm</v>
                            <v>ICurrentHorzZoneNo</v>
                            <v>bInvalidListingErr</v>
                            <v>ARbLdHorzZoneConfirmDisplay</v>
                            <v>ARbHorzStnZoneConfirmDisplay</v>
                            <v>ARbUldHorzZoneConfirmDisplay</v>
                            <v>iCurrentHorzZoneNoDisplay</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>ARRAY [0..ILDSTNQTY] OF BOOL</v>
                            <v>ARRAY [1..ISTNQTY] OF BOOL</v>
                            <v>ARRAY [0..IULDSTNQTY] OF BOOL</v>
                            <v>INT</v>
                            <v>BOOL</v>
                            <v>ARRAY [0..ILDSTNQTY] OF BOOL</v>
                            <v>ARRAY [1..ISTNQTY] OF BOOL</v>
                            <v>ARRAY [0..IULDSTNQTY] OF BOOL</v>
                            <v>INT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">9L</v>
                      </o>
                      <v n="Id">37L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">7L</v>
                </o>
              </l2>
              <v n="BranchCounter">1</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>